fix(ui): autoSuggest on mobile (#310)
* fix(ui): Slicer some fix

* fix(ui -> Slicer): some fix

* fix(ui): autoSuggest on mobile

* add observer

* fix AutoSuggest docs

* fix code style

* fix en text

--- a/packages/ui/components/AutoSuggest/index.styl
+++ b/packages/ui/components/AutoSuggest/index.styl
@@ -2,3 +2,12 @@
   justify-content center
   align-items center
   height 100%
+
+.click
+  height 30
+  width 100%
+  position absolute
+  z-index 999
+  cursor text
+  left 0
+  top 0
